# malaria-popgen-toolkit

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
env/: environment.yml
resources/: resolver.py
scripts/: setup_env.sh
scripts/ibd/: plot_hmmibd_ibd.R  run_hmmibd_from_matrix.R  summarise_hmmibd_windows.R
scripts/selection/: ihs_full_pipeline.R  ihs_selection.R  run_ihs_selection_plots.R  xpehh_full_pipeline.R
src/malaria_popgen_toolkit/: __main__.py
src/malaria_popgen_toolkit/cli/: main.py
src/malaria_popgen_toolkit/commands/: __init__.py  dataset_stats.py  fws_dotplot.py  haplotype_map_africa.py  haplotype_map_region.py  hmmibd_matrix.py  hmmibd_summary.py  ibd_plot.py  ihs_selection.py  missense_drugres_af.py  pca_plot.py  plot_hmmibd_ibd.R)  xpehh_selection.py
src/malaria_popgen_toolkit/resources/: manifest.json  resolver.py  species_registry.json
