[project]
name = "malaria-popgen-toolkit"
version = "0.1.0"
description = "Malaria population genomics toolkit"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
malaria-pipeline = "malaria_popgen_toolkit.cli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

